# revisorseo

./: .env  .env.example  .replit  DOCUMENTACAO_COMPLETA.md  abrir_dashboard.txt  config.py  dashboard.py  enviar_github.bat  gemini_client.py  gemini_quota.json  main.py  process_lock.py  pyproject.toml  replit.md  requirements.txt  seo_dashboard.db  tmdb_client.py  wordpress_client.py
attached_assets/: Pasted-Desenvolva-um-programa-em-Python-organizado-em-m-dulos-que-realize-as-seguintes-tarefas-Conex-1753881660397_1753881660398.txt
templates/: dashboard.html
